--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.junit/junit5-engine -->
+	<dependency>
+		<groupId>org.junit</groupId>
+		<artifactId>junit5-engine</artifactId>
+		<version>5.0.0-ALPHA</version>
+	</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-hateoas</artifactId>
